docs/api/qiskit/0.19/qiskit.providers.models.UchannelLO.md
---
title: UchannelLO
description: API reference for qiskit.providers.models.UchannelLO
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.UchannelLO
---

# UchannelLO

<span id="qiskit.providers.models.UchannelLO" />

`UchannelLO(q, scale)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Class representing a U Channel LO

<span id="qiskit.providers.models.UchannelLO.q" />

### q

Qubit that scale corresponds too.

<span id="qiskit.providers.models.UchannelLO.scale" />

### scale

Scale factor for qubit frequency.

Initialize a UchannelLOSchema object

**Parameters**

*   **q** (*int*) – Qubit that scale corresponds too. Must be >= 0.
*   **scale** (*complex*) – Scale factor for qubit frequency.

**Raises**

**QiskitError** – If q is \< 0

## Methods

### from\_dict

<span id="qiskit.providers.models.UchannelLO.from_dict" />

`classmethod UchannelLO.from_dict(data)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Create a new UchannelLO object from a dictionary.

**Parameters**

**data** (*dict*) – A dictionary representing the UChannelLO to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.UchannelLO#to_dict "qiskit.providers.models.UchannelLO.to_dict").

**Returns**

The UchannelLO from the input dictionary.

**Return type**

[UchannelLO](qiskit.providers.models.UchannelLO "qiskit.providers.models.UchannelLO")

### to\_dict

<span id="qiskit.providers.models.UchannelLO.to_dict" />

`UchannelLO.to_dict()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return a dictionary format representation of the UChannelLO.

**Returns**

The dictionary form of the UChannelLO.

**Return type**

dict

